assets/css/tailwind.css
/* ... */
@layer utilities {

  .paused {
    animation-play-state: paused !important; /* Not sure it's smart to use !important here, but necessary rn */
  }
  
 .normal-feature-card-style-red {
  @apply bg-gradient-to-b from-rose-400 to-pink-500;
 }
 .normal-feature-card-style-red-content {
  @apply shadow-red-900/40;
 }

 .normal-feature-card-style-orange {
  @apply bg-gradient-to-b from-amber-400 to-orange-500;
 }
 .normal-feature-card-style-orange-content {
  @apply shadow-orange-900/30;
 }

 .normal-feature-card-style-yellow {
  @apply bg-gradient-to-b from-yellow-400 to-amber-500;
 }
 .normal-feature-card-style-yellow-content {
  @apply shadow-yellow-800/30;
 }

 .normal-feature-card-style-blue {
  @apply bg-gradient-to-b from-cyan-400 to-blue-500;
 }
 .normal-feature-card-style-blue-content {
  @apply shadow-blue-900/40;
 }

 .normal-feature-card-style-green {
  @apply bg-gradient-to-b from-lime-400 to-emerald-500;
 }
 .normal-feature-card-style-green-content {
  @apply shadow-green-900/30;
 }

 .normal-feature-card-style-purple {
  @apply bg-gradient-to-b from-fuchsia-400 to-violet-500;
 }
 .normal-feature-card-style-purple-content {
  @apply shadow-violet-900/40;
 }

 .normal-feature-card-style-yellow-purple {
  @apply bg-gradient-to-b from-amber-400 to-fuchsia-500;
 }
 .normal-feature-card-style-yellow-purple-content {
  @apply shadow-pink-900/30;
 }

 .normal-feature-card-style-blue-green {
  @apply bg-gradient-to-b from-cyan-300 to-green-500;
 }
 .normal-feature-card-style-blue-green-content {
  @apply shadow-cyan-900/30;
 }

 .normal-feature-card-style-blue-purple {
  @apply bg-gradient-to-b from-cyan-400 to-fuchsia-500 ;
 }
 .normal-feature-card-style-blue-purple-content {
  @apply bgshadow-purple-900/30;
 }

 .normal-feature-card-style-yellow-green {
  @apply bg-gradient-to-b from-amber-300 to-green-500;
 }
 .normal-feature-card-style-yellow-green-content {
  @apply shadow-lime-900/30;
 }

 .normal-feature-card-style-gray {
  @apply bg-gradient-to-b from-slate-400 to-stone-500;
 }
 .normal-feature-card-style-gray-content {
  @apply shadow-gray-700/40;
 }

  .text-gradient-to-r {
    @apply text-gradient-base bg-gradient-to-r;
  }
  .text-gradient-to-l {
    @apply text-gradient-base bg-gradient-to-l;
  }
  .text-gradient-base {
    @apply text-transparent;
    -webkit-background-clip: text; /* Webkit to try and fix underlines, but don't think it works */
    background-clip: text;

    /* Set `display: inline-block` and `position: relative` to make this compatible with cool-underline. We're not doing that here because this breaks line wrapping. */
  }
  .text-gradient-block-base {
    @apply inline-block relative py-[1em] -my-[1em]; /* The padding adjustment is necessary so the bottom/top of tall characters like `g` isn't cut off. The margin compensates for it for the layout. */
  }
  .text-gradient-to-l-block { /* Created this for use with the move-uppp class. The move-uppp animation needs the elements to be blocks. */
    @apply text-gradient-to-l text-gradient-block-base;
  }
  .text-gradient-to-r-block {
    @apply text-gradient-to-r text-gradient-block-base;
  }

  .gradient-violet {
    @apply from-indigo-500 to-fuchsia-500;
  }
  .gradient-red { 
    @apply to-[hsl(0,100%,62%)] via-35% via-[hsl(4,80%,53%)] from-[hsla(10,95%,40%)] 
    /* @apply to-red-500 from-red-600 */
  }
  .gradient-orange-red { 
    @apply from-red-500 to-amber-400
  }
  .gradient-blue-light-blue {
    @apply from-blue-500 to-cyan-300;
  }
  .gradient-blue {
    /* @apply from-blue-500 to-cyan-300; */
    /* @apply from-[#065ff7] to-[color(display-p3_-0.0495_0.6058_1.0307)]  <- Most intense gradient I could come up with */
    @apply from-[#065ff7] to-[#329ee8] /* <- Less neon version of most intense  */
  }
  .gradient-blue-wide {
    @apply from-indigo-400 to-teal-300;
  }

  .gradient-blue-green {
    @apply from-cyan-400 to-teal-300;
  }
  .gradient-green-yellow {
    @apply from-green-400 to-yellow-300;
  }
  .gradient-green-big {
    @apply to-[#a0f102] from-[#22c55e] /* Made with big text as basis, because simply applying brightness filter to other green gradient didn't work */
  }
  .gradient-green {
    @apply to-[#039d23] from-[#017e03]
  }
  /* .text-gradient-light-yellow {
    @apply from-lime-300 to-amber-300
  }
  .text-gradient-yellow {
    @apply from-lime-300 to-amber-300
  } */
  .gradient-orange-yellow { 
    @apply from-orange-500 to-yellow-300
  }
  .gradient-orange { 
    /* @apply from-red-500 to-orange-300 */
    @apply to-[hsl(35,100%,55.4%)] from-[hsl(0,85.2%,60.2%)]
  }
}

